tests/src/frontend/typechecking/invalid/bind_pattern3.sk
class Foo(x: Int, y: String)

fun main(): String {
  Foo(x, y) = mutable Foo(42, "Pass\n");
  y
}
